--- a/app/src/main/res/layout/board_view.xml
+++ b/app/src/main/res/layout/board_view.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green"
+    android:orientation="horizontal"
     tools:context="com.example.micha.snake.MainActivity">
 
     <TextView
@@ -55,7 +56,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="0dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
