--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,11 @@
         <item name="android:windowBackground">@drawable/dial</item>
     </style>
 
+    <style name="TipTheme">
+        <!-- Customize your theme here. -->
+        <!--<item name="windowNoTitle">true</item>-->
+        <!--<item name="android:windowBackground">@drawable/dial</item>-->
+
+    </style>
+
 </resources>
