--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="green">#6DB768</color>
+    <color name="green">#457842</color>
+    <color name="semi_green">#be2c492a</color>
     <color name="black">#000000</color>
 </resources>
