--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:layout_editor_absoluteY="0dp"
-    tools:layout_editor_absoluteX="0dp"
-    android:background="@color/green">
+    tools:layout_editor_absoluteX="0dp">
 
     <ImageButton
         android:id="@+id/square1"
@@ -64,7 +63,7 @@
         app:layout_constraintRight_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/guideline7"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_tunel1" />
+        app:srcCompat="@drawable/ic_tunel" />
 
     <ImageButton
         android:id="@+id/tunel"
